adding starter files

--- a/popup.html
+++ b/popup.html
@@ -1,15 +1,35 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <style>
-      button {
-        height: 30px;
-        width: 30px;
-        outline: none;
-      }
-    </style>
-  </head>
-  <body>
-    <button id="changeColor"></button>
-  </body>
+
+<head>
+    <link rel="stylesheet" type="text/css" href="popup.css">
+
+</head>
+
+<body>
+    <p> testing </p>
+    <div id="home" class="tabcontent">
+        <h3>Home</h3>
+        <p>Home is where the heart is..</p>
+      </div>
+      
+      <div id="insights" class="tabcontent">
+        <h3>Insights</h3>
+        <p>Some news this fine day!</p>
+      </div>
+      
+      <div id="rewards" class="tabcontent">
+        <h3>R</h3>
+        <p>Get in touch, or swing by for a cup of coffee.</p>
+      </div>
+      <div class="navbar">
+        <a href="#home" class="active">Home</a>
+        <a href="#news">Insights</a>
+        <a href="#contact">Rewards</a>
+      </div>
+
+    <script type="text/javascript" src="popup.js"> </script>
+
+</body>
+
 </html>
