updating with lots of progress

--- a/popup.html
+++ b/popup.html
@@ -3,14 +3,10 @@
 
 <head>
     <link rel="stylesheet" type="text/css" href="popup.css">
-
 </head>
 
 <body>
-    <p> testing </p>
     <div id="home" class="tabcontent">
-        <h3>Home</h3>
-        <p>Home is where the heart is..</p>
       </div>
       
       <div id="insights" class="tabcontent">
@@ -19,16 +15,16 @@
       </div>
       
       <div id="rewards" class="tabcontent">
-        <h3>R</h3>
+        <h3>Rewards</h3>
         <p>Get in touch, or swing by for a cup of coffee.</p>
       </div>
+
       <div class="navbar">
         <a href="#home" class="active">Home</a>
         <a href="#news">Insights</a>
         <a href="#contact">Rewards</a>
       </div>
-
-    <script type="text/javascript" src="popup.js"> </script>
+      <script type="text/javascript" src="popup.js"> </script>
 
 </body>
 
