changes to popup to have insights html show up

--- a/popup.html
+++ b/popup.html
@@ -21,7 +21,7 @@
 
       <div class="navbar">
         <a href="#home" class="active">Home</a>
-        <a href="#news">Insights</a>
+        <a href="Insights.html">Insights</a>
         <a href="#contact">Rewards</a>
       </div>
       <script type="text/javascript" src="popup.js"> </script>
