--- a/Insights.html
+++ b/Insights.html
@@ -1,6 +1,14 @@
 <html>
     <head>
+      <div>
+        <img src="C:\Users\Amardeep\Desktop\HACKATHON\ezgif-1-edafe7faf4c7.gif" class="center">
+      </div>
       <style>
+        .center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+ }
 /* The Modal (background) */
 .modal {
   display: none; /* Hidden by default */
@@ -116,11 +124,9 @@
         <h1>
             CONGRATULATIONS! YOU'VE COLLECTED <b><u>GREEN BUCKS </b></u> 
         </h1>
-        <div id="myProgress">
-                <div id="myBar"></div>
-              </div>
+  
         <h1></class>
-          <h1> YOU'RE ANOTHER 7000 POINTS FROM ENETRING THE GOLD TIER. KEEP ON SHOPPING GREEN</h1>
+          <h1> YOU NOW OWN $75 WORTH OF GREEN BUCKS THAT CAN BE REDEEMED</h1>
         </h1>
         <hr>
 <script type="text/javascript" src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
