--- a/Insights.html
+++ b/Insights.html
@@ -1,7 +1,7 @@
 <html>
     <head>
       <div>
-        <img src="C:\Users\Amardeep\Desktop\HACKATHON\ezgif-1-edafe7faf4c7.gif" class="center">
+        <img src="C:\Users\Amardeep\Desktop\HACKATHON\Logo v1.png" height="250" width="700" class="center" loop=1>
       </div>
       <style>
         .center {
@@ -121,12 +121,7 @@
   right: 0;
 }
 </style>
-        <h1>
-            CONGRATULATIONS! YOU'VE COLLECTED <b><u>GREEN BUCKS </b></u> 
-        </h1>
-  
-        <h1></class>
-          <h1> YOU NOW OWN $75 WORTH OF GREEN BUCKS THAT CAN BE REDEEMED</h1>
+         <h1> YOU NOW OWN $75 WORTH OF GREEN BUCKS THAT CAN BE REDEEMED</h1>
         </h1>
         <hr>
 <script type="text/javascript" src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
@@ -400,4 +395,9 @@ window.onclick = function(event) {
 }
 
  </script>     
+
+ <div>
+   <p align="right">Created by</p>
+<img src="C:\Users\Amardeep\Desktop\HACKATHON\Logo v1.png" height="75" width="75" align="right">
+ </div>
 </html>
