--- a/catalogue.html
+++ b/catalogue.html
@@ -1,16 +1,17 @@
 <html>
 <head>
-    <link rel="stylesheet" type="text/css" href="navigation.css">
     <link rel="stylesheet" type="text/css" href="catalogue.css">
+    <link rel="stylesheet" type="text/css" href="bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="navigation.css">
 
 </head>
 <body>
     <img src="https://i.ibb.co/1mq2mfc/Logo.png" height="100px" class="center" margin-top="15px">
-
     <div id="navigation"> </div>
-
-  
+    <hr>
+    <div id="products"> </div>
   <script type="text/javascript" src="navigation.js"></script>
+  <script type="text/javascript" src="catalogue.js"></script>
 
 </body>
 
